@@ -26,6 +26,8 @@ Version 1.0-unreleased
 
 * added scripts to use LCOV (`http://ltp.sourceforge.net/coverage/lcov.php')
   to determine test case coverage (use `make cover' in `tests' directory)
+  
+* implemented equivalence check for states
 
 
 
